@startuml Entity Relationship Diagram
top to bottom direction

note as Disclaimer
Diagram generated with the assistance of Cascade AI coding assistant - may contain errors
PlantUML URL: https://plantuml.com/ie-diagram
Last Updated: 2025-11-03
This diagram should be verified against the current database schema for accuracy.
end note

entity "auditHistory" {
  * id : serial4
  --
  userId : varchar(255)
  taid : varchar(255)
  action : varchar(255)
  note : varchar(255)
  timestamp : timestamptz
}

entity "departments" {
  * id : serial4
  --
  * name : varchar(255)
  * type : varchar(255)
  * ownedBy : int4
}

entity "distanceMatrix" {
  * id : serial4
  --
  origin : varchar(255)
  destination : varchar(255)
  kilometers : float4
}

entity "emailList" {
  * id : serial4
  --
  email : varchar(255)
}

entity "expenses" {
  * id : serial4
  --
  travel_authorization_id : int4
  description : varchar(255)
  date : date
  cost : float4
  currency : varchar(255)
  type : varchar(255)
  receipt_image : bytea
  file_size : int4
  file_name : varchar(255)
  expense_type : varchar(255)
  created_at : timestamptz
  updated_at : timestamptz
}

entity "flight_reconciliations" {
  * id : serial4 <<PK>>
  --
  * reconcilerd_id : int4 <<FK>>
  * external_trav_com_identifier : int4 <<UNIQUE>>
  * invoice_detail_segment numeric(19, 4)
  * invoice_detail_vendor_name varchar(255)
  * invoice_detail_computed_traveler_first_name varchar(255)
  * invoice_detail_computed_traveler_last_name varchar(255)
  * reconciled : bool : default false
  --
  invoice_booking_date timestamptz
  invoice_department_mailcode varchar(255)
  invoice_detail_computed_agent_name varchar(255)
  segments_computed_flight_info text
  segments_computed_final_destination varchar(255)
  reconcile_period : int4
  --
  * created_at : timestamptz : default CURRENT_TIMESTAMP
  * updated_at : timestamptz : default CURRENT_TIMESTAMP
  deleted_at : timestamptz
  --
  Relates to external TravCom database table ARInvoiceDetailsNoHealth -> InvoiceDetailID
}

entity "flight_statistics" {
  * id : serial4 <<PK>>
  --
  * department_mailcode : varchar(255)
  * destination_airport_code : varchar(255)
  * destination_city : varchar(255)
  * destination_province : varchar(255)
  * total_trips : int4
  * total_round_trips : int4
  * total_days : int4
  * total_expenses : float4
  * total_flight_cost : float4
  * total_round_trip_cost : float4
  * average_duration_days : float4
  * average_expenses_per_day : float4
  * average_round_trip_flight_cost : float4
  --
  * created_at : timestamptz
  * updated_at : timestamptz
  deleted_at : timestamptz
  --
  Aggregated flight statistics by department mailcode and destination, derived from TravCom database.
}

entity "flight_statistic_jobs" {
  * id : serial4 <<PK>>
  --
  * progress : int4 : default 0
  * created_at : timestamptz : default CURRENT_TIMESTAMP
  * updated_at : timestamptz : default CURRENT_TIMESTAMP
  deleted_at : timestamptz
  --
  Tracks progress of flight statistics sync/aggregation jobs
}

entity "general_ledger_codings" {
  * id : serial4
  --
  * travel_authorization_id : int4
  --
  * code : varchar(26)
  * amount : float4
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity "knex_migrations" {
  * id : serial4
  --
  name : varchar(255)
  batch : int4
  migration_time : timestamptz
}

entity "knex_migrations_lock" {
  * index : serial4
  --
  is_locked : int4
}

entity "locations" {
  * id : int4
  --
  province : varchar(255)
  city : varchar(255)
  created_at : timestamptz
  updated_at : timestamptz
}

entity "per_diems" {
  * id : serial4
  --
  * claim_type : varchar(255)
  * travel_region : varchar(255)
  * amount : float4
  * currency : varchar(255)
  * created_at : timestamptz
  * updated_at : timestamptz
  deleted_at : timestamptz
  --
  UNIQUE(claim_type, travel_region, currency) WHERE deleted_at IS NULL
}

entity "stops" {
  * id : serial4
  --
  * travel_authorization_id : int4
  * is_actual : bool : default false
  location_id : int4
  departure_date : date
  departure_time : time
  transport : varchar(255)
  accommodation_type : varchar(255)
  created_at : timestamptz
  updated_at : timestamptz
}

entity "transportMethod" {
  * id : serial4
  --
  method : varchar(255)
}

entity "travel_allowances" {
  * id : serial4
  --
  * allowance_type : varchar(255)
  * amount : float4
  * currency : varchar(255)
  * created_at : timestamptz
  * updated_at : timestamptz
  deleted_at : timestamptz
  --
  UNIQUE(allowance_type, currency) WHERE deleted_at IS NULL
}

entity "travel_authorization_action_logs" {
  * id : serial4
  --
  * travel_authorization_id : <<FK>> int4
  * actor_id : <<FK>> int4
  * assignee_id : <<FK>> int4
  * action : varchar(255)
  note : varchar(255)
  created_at : timestamptz
  updated_at : timestamptz
}

together {
  entity "travel_authorization_pre_approval_documents" {
    * id : serial4
    --
    * submission_id : int4 <<FK>>
    * approval_document : bytea
    * approval_document_approver_name : varchar(255)
    * approval_document_approved_on : date
    * name : varchar(255)
    * mime_type : varchar(255)
    * size_in_bytes : int4
    * md5 : varchar(255)
    * created_at : timestamptz
    * updated_at : timestamptz
    deleted_at : timestamptz
  }

  entity "travel_authorization_pre_approval_profiles" {
    * id : serial4 <<PK>>
    --
    * pre_approval_id : int4 <<FK>>
    * profile_name : varchar(255)
    * department : varchar(255)
    branch : varchar(255)
    created_at: timestamptz
    updated_at: timestamptz
    deleted_at: timestamptz
  }

  entity "travel_authorization_pre_approval_submissions" {
    * id : serial4 <<PK>>
    --
    * creator_id : int4 <<FK>>
    approver_id : int4 <<FK>>
    approved_at : timestamptz
    * status : varchar(255)
    * department : varchar(255)
    * created_at : timestamptz
    * updated_at : timestamptz
    deleted_at : timestamptz
  }

  entity "travel_authorization_pre_approvals" {
    * id : int <<PK>>
    --
    * creator_id : int4 <<FK>>
    * submission_id : int4 <<FK>>
    * estimated_cost : int
    * is_open_for_any_date : bool
    * is_open_for_any_traveler : bool
    * location : varchar(255)
    branch : varchar(255)
    department : varchar(255)
    end_date : date
    month : varchar(255)
    number_travelers : int
    purpose : varchar(255)
    reason : varchar(255)
    start_date : date
    traveler_notes : varchar(255)
    * created_at : timestamptz
    * updated_at : timestamptz
    deleted_at : timestamptz
  }
}

entity "travel_authorizations" {
  * id : int4
  --
  * user_id : int4 <<FK>>
  pre_approval_profile_id : int4 <<FK>>
  purpose_id : int4 <<FK>>
  --
  * slug : varchar(255) <<UNIQUE>>
  * step_number : int4
  first_name : varchar(255)
  last_name : varchar(255)
  department : varchar(255)
  division : varchar(255)
  branch : varchar(255)
  unit : varchar(255)
  email : varchar(255)
  mailcode : varchar(255)
  days_off_travel_status_estimate : int4
  days_off_travel_status_actual : int4
  date_back_to_work_estimate : date
  date_back_to_work_actual : date
  travel_duration_estimate : int4
  travel_duration_actual : int4
  travel_advance : int4
  event_name : varchar(255)
  summary : varchar(255)
  benefits : varchar(2000)
  status : varchar(255)
  supervisor_email : varchar(255)
  request_change : varchar(255)
  denial_reason : varchar(2000)
  trip_type_estimate : varchar(255) - round_trip, one_way, multi_destination
  trip_type_actual : varchar(255) - round_trip, one_way, multi_destination
  created_by : int4
  travel_advance_in_cents : int4
  all_travel_within_territory : bool
  * created_at : timestamptz
  * updated_at : timestamptz
}

together {
  entity "travel_desk_passenger_name_record_documents" {
    * id : serial4
    --
    * travel_desk_travel_request_id : int4 <<FK>>
    --
    pnr_document : bytea
    invoice_number : varchar(255)
    * created_at : timestamptz
    * updated_at : timestamptz
    deleted_at : timestamptz
  }

  entity "travel_desk_travel_requests" {
    * id : serial4 <<PK>>
    --
    * travel_authorization_id : int4 <<FK>> <<UNIQUE>>
    travel_agency_id : int4 <<FK>>
    --
    * bus_email : varchar(255)
    * bus_phone : varchar(255)
    * city : varchar(255)
    * legal_first_name : varchar(255)
    * legal_last_name : varchar(255)
    * postal_code : varchar(255)
    * province : varchar(255)
    * status : varchar(255)
    * str_address : varchar(255)
    * travel_purpose : varchar(255)
    * is_international_travel : bool
    additional_information : varchar(255)
    birth_date : varchar(255)
    legal_middle_name : varchar(255)
    passport_country : varchar(255)
    passport_num : varchar(255)
    travel_contact : bool
    travel_desk_officer : varchar(255)
    travel_email : varchar(255)
    travel_location : varchar(255)
    travel_notes : varchar(255)
    travel_phone : varchar(255)
    * created_at : timestamptz
    * updated_at : timestamptz
  }

  entity "travel_desk_flight_options" {
    * id : serial4 <<PK>>
    --
    * flight_request_id : int4 <<FK>>
    * traveler_id : int4 <<FK>>
    --
    *cost : varchar(255)
    * leg : varchar(255)
    * duration : varchar(255)
    flight_preference_order : int4
    additional_information : text
    * created_at : timestamptz
    * updated_at : timestamptz
    deleted_at : timestamptz
  }

  entity "travel_desk_flight_requests" {
    * id : serial4
    --
    * travel_request_id : int4
    * depart_location : varchar(255)
    * arrive_location : varchar(255)
    * date_preference : date
    * time_preference : varchar(255)
    * seat_preference : varchar(255)
    * created_at : timestamptz
    * updated_at : timestamptz
    deleted_at : timestamptz
  }

  entity "travel_desk_flight_segments" {
    * id : serial4 <<PK>>
    --
    * flight_option_id : int4 <<FK>>
    --
    * flight_number : varchar(255)
    * depart_at : timestamptz
    * depart_location : varchar(255)
    * arrive_at : timestamptz
    * arrive_location : varchar(255)
    * duration : varchar(255)
    * status : varchar(255)
    * class : varchar(255)
    sort_order : int4 : default 1
    * created_at : timestamptz
    * updated_at : timestamptz
    deleted_at : timestamptz
  }

  entity "travel_desk_hotels" {
    * id : serial4 <<PK>>
    --
    * travel_request_id : int4 <<FK>>
    --
    * city : varchar(255)
    * is_dedicated_conference_hotel_available : bool
    * conference_name : varchar(255)
    * conference_hotel_name : varchar(255)
    * check_in : date
    * check_out : date
    * status : varchar(255)
    additional_information : varchar(255)
    reserved_hotel_info : varchar(255)
    booking : varchar(255)
    * created_at : timestamptz
    * updated_at : timestamptz
    deleted_at : timestamptz
  }

  entity "travel_desk_other_transportations" {
    * id : serial4 <<PK>>
    --
    * travel_request_id : int4 <<FK>>
    --
    * depart : varchar(255)
    * arrive : varchar(255)
    * transportation_type : varchar(255)
    * date : date
    * status : varchar(255)
    additional_notes : varchar(255)
    reserved_transportation_info : varchar(255)
    booking : varchar(255)
    * created_at : timestamptz
    * updated_at : timestamptz
    deleted_at : timestamptz
  }

  entity "travel_desk_questions" {
    * id : serial4 <<PK>>
    --
    * travel_request_id : int4 <<FK>>
    --
    * request_type : varchar(255)
    * question : varchar(255)
    response : varchar(255)
    * created_at : timestamptz
    * updated_at : timestamptz
    deleted_at : timestamptz
  }

  entity "travel_desk_rental_cars" {
    * id : serial4 <<PK>>
    --
    * travel_request_id : int4 <<FK>>
    --
    * pick_up_city : varchar(255)
    * pick_up_location : varchar(255)
    * vehicle_type : varchar(255)
    * pick_up_date : timestamptz
    * drop_off_date : timestamptz
    * status : varchar(255)
    pick_up_location_other : varchar(255)
    drop_off_city : varchar(255)
    drop_off_location : varchar(255)
    drop_off_location_other : varchar(255)
    same_drop_off_location : bool
    match_flight_times : bool
    vehicle_type_change_indicator : varchar(255)
    vehicle_change_rationale : varchar(255)
    additional_notes : varchar(255)
    reserved_vehicle_info : varchar(255)
    booking : varchar(255)
    * created_at : timestamptz
    * updated_at : timestamptz
    deleted_at : timestamptz
  }

  entity "travel_desk_travel_agencies" {
    * id : serial4
    --
    * agency_name : varchar(255)
    agency_info : text
  }
}

entity "travel_purposes" {
  * id : serial4 <<PK>>
  --
  * purpose : varchar(255)
  * created_at : timestamptz
  * updated_at : timestamptz
  deleted_at : timestamptz
}

entity "travel_segments" {
  * id : serial4
  --
  * travel_authorization_id : int4
  * is_actual : bool : default false
  departure_location_id : int4
  arrival_location_id : int4
  --
  * segment_number : int4
  departure_on : date
  departure_time : varchar(255)
  mode_of_transport : varchar(255)
  mode_of_transport_other : varchar(255)
  accommodation_type : varchar(255)
  accommodation_type_other : varchar(255)
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity "tripReports" {
  * id : serial4
  --
  taid : int4
  costDifferenceExplanation : varchar(255)
  skillsGained : varchar(255)
  applicationTimeframe : varchar(255)
  benefitsToUnit : varchar(255)
  benefitsToYG : varchar(255)
  futureRecommendations : varchar(255)
  reportStatus : varchar(255)
}

entity "users" {
  * id : int4
  --
  sub : varchar(255)
  email : varchar(255)
  status : varchar(255)
  first_name : varchar(255)
  last_name : varchar(255)
  department : varchar(255)
  roles : _varchar[]
  created_at : timestamptz
  updated_at : timestamptz
  division : varchar(255)
  branch : varchar(255)
  unit : varchar(255)
  mailcode : varchar(255)
  manager : varchar(255)
  last_employee_directory_sync_at : timestamptz
}


entity "yg_employee_groups" {
  * id : serial4
  --
  * department : varchar(255)
  division : varchar(255)
  branch : varchar(255)
  unit : varchar(255)
  * order : int4
  last_sync_success_at : timestamptz
  last_sync_failure_at : timestamptz
  * created_at : timestamptz
  * updated_at : timestamptz
  deleted_at : timestamptz
}

entity "yg_employees" {
  * id : serial4
  --
  * email : varchar(255) <<UNIQUE>>
  * username : varchar(255)
  * full_name : varchar(255)
  * first_name : varchar(255)
  * last_name : varchar(255)
  * department : varchar(255)
  division : varchar(255)
  branch : varchar(255)
  unit : varchar(255)
  organization : varchar(255)
  "title" : varchar(255)
  suite : varchar(255)
  phone_office : varchar(255)
  fax_office : varchar(255)
  mobile : varchar(255)
  office : varchar(255)
  address : varchar(255)
  po_box : varchar(255)
  community : varchar(255)
  postal_code : varchar(255)
  latitude : varchar(255)
  longitude : varchar(255)
  mailcode : varchar(255)
  manager : varchar(255)
  last_sync_success_at : timestamptz
  last_sync_failure_at : timestamptz
  * created_at : timestamptz
  * updated_at : timestamptz
  deleted_at : timestamptz
}

namespace external #LightGrey {
  entity "ARInvoicesNoHealth" {
    * InvoiceID : decimal(18,0) <<PK>>
    --
    * InvoiceNumber : nvarchar(10)
    --
    ProfileNumber : nvarchar(10)
    ProfileName : nvarchar(50)
    Department : nvarchar(30)
    BookingDate : datetime2
    SystemDate : datetime2
    Description : nvarchar(50)
    InvoiceRemarks : nvarchar(MAX)
    --
    From the TravCom database, supports flight_reconciliations.
  }
}

' Relationships
expenses .. per_diems : estimates generation
expenses .. travel_allowances : estimates generation
flight_reconciliations .. travel_desk_flight_options : flight bookings
travel_authorization_pre_approval_profiles .. yg_employees : profile_name
yg_employees .. yg_employee_groups : department, division, branch, unit

expenses::travel_authorization_id ||--o{ travel_authorizations::id
general_ledger_codings::travel_authorization_id ||--o{ travel_authorizations::id
stops::travel_authorization_id }o--|| travel_authorizations::id
travel_authorization_action_logs::actor_id ||--o{ users::id
travel_authorization_action_logs::assignee_id ||--o{ users::id
travel_authorization_action_logs::travel_authorization_id ||--o{ travel_authorizations::id
travel_authorization_pre_approval_submissions::approver_id |o--o{ users::id
travel_authorization_pre_approval_submissions::creator_id ||--o{ users::id
travel_authorization_pre_approval_submissions::id }o--|| travel_authorization_pre_approval_documents::submission_id
travel_authorization_pre_approval_submissions::id }|--o| travel_authorization_pre_approvals::submission_id
travel_authorization_pre_approvals::id }|--|| travel_authorization_pre_approval_profiles::pre_approval_id
travel_authorization_pre_approvals::creator_id ||--o{ users::id
travel_authorizations::pre_approval_profile_id |o--o{ travel_authorization_pre_approval_profiles::id
travel_authorizations::purpose_id ||--o{ travel_purposes::id
travel_desk_flight_options::id }o--|| travel_desk_flight_segments::flight_option_id
travel_desk_flight_requests::id }o--|| travel_desk_flight_options::flight_request_id
travel_desk_hotels::travel_request_id ||--o{ travel_desk_travel_requests::id
travel_desk_other_transportations::travel_request_id ||--o{ travel_desk_travel_requests::id
travel_desk_passenger_name_record_documents::travel_desk_travel_request_id ||--o{ travel_desk_travel_requests::id
travel_desk_rental_cars::travel_request_id ||--o{ travel_desk_travel_requests::id
travel_desk_travel_requests::id }o--|| travel_desk_flight_requests::travel_request_id
travel_desk_travel_requests::id }o--|| travel_desk_questions::travel_request_id
travel_desk_travel_requests::travel_agency_id |o--o{ travel_desk_travel_agencies::id
travel_desk_travel_requests::travel_authorization_id ||--o{ travel_authorizations::id
travel_segments::arrival_location_id |o--o{ locations::id
travel_segments::departure_location_id |o--o{ locations::id
travel_segments::travel_authorization_id ||--o{ travel_authorizations::id
users::id }o--|| travel_authorizations::user_id
users::id }o--|| travel_desk_flight_options::traveler_id

flight_reconciliations::external_trav_com_identifier ||..o{ external.ARInvoicesNoHealth::InvoiceNumber
flight_statistics .. external.ARInvoicesNoHealth : aggregated by department mailcode and destination
flight_statistic_jobs .. flight_statistics : tracks sync/aggregation progress
@enduml
